header section is ready

--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body class="open-sans-genarel">
-    <header></header>
+    <header class="header-container">
+      <nav>
+        <div class="name">
+          <p>Ma<span>r</span>y</p>
+        </div>
+        <div class="menu">
+          <ul class="">
+            <li><a class="dark-2" href="">Portfolio</a></li>
+            <li><a class="dark-2" href="">Blog</a></li>
+            <li><button class="btn-primary nav-btn">Hire Me</button></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="banar-container">
+        <div class="banar-context">
+          <p class="dark-2 banar-greeting">Hi, I am</p>
+          <h1 class="banar-title">Mary Hardy</h1>
+          <p class="dark-3 banar-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div class="buttons">
+            <button class="btn-primary">Download CV</button
+            ><button class="btn-primary">Contact</button>
+          </div>
+        </div>
+        <img src="./assets/hardy.png" alt="">
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
