--- a/index.html
+++ b/index.html
@@ -33,10 +33,154 @@
             ><button class="btn-primary">Contact</button>
           </div>
         </div>
-        <img src="./assets/hardy.png" alt="">
+        <img src="./assets/hardy.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about-me-sec">
+        <div class="about-container">
+          <h1 class="section-title">About Me</h1>
+          <p class="section-description about-para">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
+          </p>
+          <div class="contact-details">
+            <div class="contact-items">
+              <p class="items-title">Name:</p>
+              <p class="items-value">Mark Hardy</p>
+            </div>
+            <div class="contact-items">
+              <p class="items-title">Email:</p>
+              <p class="items-value">mark@gmail.com</p>
+            </div>
+            <div class="contact-items">
+              <p class="items-title">DOB:</p>
+              <p class="items-value">11 Nov 1994</p>
+            </div>
+            <div class="contact-items">
+              <p class="items-title">From:</p>
+              <p class="items-value">Rajshahi, BD</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills-sec">
+        <h1 class="section-title">What I do</h1>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skill-set">
+          <div class="skills">
+            <img src="./assets/icons/js.png" alt="" />
+            <h3 class="dark2">Vanilla JavaScript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skills">
+            <img src="./assets/icons/react.png" alt="" />
+            <h3 class="dark2">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skills">
+            <img src="./assets/icons/nodejs.png" alt="" />
+            <h3 class="dark2">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skills">
+            <img src="./assets/icons/mongo.png" alt="" />
+            <h3 class="dark2">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="resume-sec">
+      <h2 class="section-title">A summary of My Resume</h2>
+        <div class="resume-container">
+        <div class="resume-column">
+            <div class="column-title">My Education</div>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Master in Computer Engineering</h3>
+              <h4 class="resu-card-sub-title">Harvard University / 2015 - 2017</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+            <hr>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Master in Computer Engineering</h3>
+              <h4 class="resu-card-sub-title">Harvard University / 2015 - 2017</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+            <hr>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Master in Computer Engineering</h3>
+              <h4 class="resu-card-sub-title">Harvard University / 2015 - 2017</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+          </div class="resume-column">
+          <div class="resume-column">
+            <div class="column-title">My Experience</div>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Sr. Font End Developer</h3>
+              <h4 class="resu-card-sub-title">Apple Inc / 2020 - Current</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+            <hr>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Sr. Font End Developer</h3>
+              <h4 class="resu-card-sub-title">Apple Inc / 2020 - Current</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+            <hr>
+            <div class="resume-card">
+              <h3 class="resu-card-title">Sr. Font End Developer</h3>
+              <h4 class="resu-card-sub-title">Apple Inc / 2020 - Current</h4>
+              <div class="card-description">
+                <p class="section-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              </div>
+            </div>
+          </div class="resume-column">
+        </div>
+        <div class="resu-download">
+          <button class="btn-primary">Download Resume</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
