--- a/index.html
+++ b/index.html
@@ -181,6 +181,32 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="connect">
+          <h2 class="footer-subtitle">
+            Let's Connet
+          </h2>
+          <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div class="socials">
+            <img src="./assets/icons/facebook.png" alt="">
+            <img src="./assets/icons/insta.png" alt="">
+            <img src="./assets/icons/twitter.png" alt="">
+            
+          </div>
+        </div>
+        <div class="contact">
+          <h2 class="footer-subtitle">Let's Message Me</2>
+            <div class="footer-form">
+              <form action="">
+                <input type="text" placeholder="name" name="name" id="">
+                <input type="email" placeholder="email" name="name" id="">
+                <textarea name="" placeholder="Enter yur message" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="Send">
+              </form>
+            </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
